paperless-ngx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx        # < name of the deployment
  namespace: paperless-ngx   # < namespace where place the deployment and pods
  labels:
    app: paperless-ngx       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: paperless-ngx
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      volumes:
      - name: paperless-ngx-data  # < linkname of the volume for the pvc
        persistentVolumeClaim:
          claimName: iscsi-pvc-paperless-data
      - name: paperless-ngx-media # < linkname of the volume for the pvc
        persistentVolumeClaim:
          claimName: iscsi-pvc-paperless-media

      - name: paperless-ngx-consume # < linkname of the volume for the pvc
        persistentVolumeClaim:
          claimName: iscsi-pvc-paperless-consume
      - name: paperless-ngx-export # < linkname of the volume for the pvc
        persistentVolumeClaim:
          claimName: iscsi-pvc-paperless-export
      containers:
      - image: ghcr.io/paperless-ngx/paperless-ngx:latest # < the name of the docker image we will use
        name: paperless-ngx                      # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
        - name: PGID
          value: "568" # < group "user"
        - name: PUID
          value: "568" # < user "docker"
        - name: TZ
          value: Europe/Brussels
        ports:                              # < the ports required (see container documentation)
         - containerPort: 8000
           name: http-80
           protocol: TCP
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /usr/src/paperless/data               # < mount location in the container
           name: paperless-ngx-data               # < volumelabel configured earlier in the yaml file
         - mountPath: /usr/src/paperless/media
           name: paperless-ngx-media
         - mountPath: /usr/src/paperless/consume
           name: paperless-ngx-consume
         - mountPath: /usr/src/paperless/export
           name: paperless-ngx-export
