paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-service    # < name of the service
  namespace: paperless-ngx       # < namespace where place the deployment and pods
spec:
  selector:
    app: paperless-ngx           # < reference to the deployment (connects with this deployment)
  ports:
    - name: http-80
      protocol: TCP
      port: 80
